fix: gaps in section slider

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -206,7 +206,7 @@ main {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  gap: 20px;
+  gap: 21px;
   padding-left: 60px;
   color: var(--dark);
 }
@@ -259,11 +259,20 @@ main {
   overflow: hidden;
 }
 
+.slider .section_subtitle {
+  margin-bottom: 12px;
+}
+
+.slider .section__title {
+  margin-bottom: 20px;
+}
+
 .row {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 20px;
+  margin-bottom: 20px;
 }
 
 .slider__text {
